@startuml
'https://plantuml.com/class-diagram
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR_T4
skinparam classBackgroundColor RANK_COLOR
skinparam classBorderColor RANK_COLOR_T1
skinparam classStereotypeFontColor RANK_COLOR_T1

show member

Class Command
Class RankCommand
Class "<<interface>>\nComparator<Client>" as Comparator
Class Client {
- totalPurchase : int
}

Class Name
Class CommandResult

class TotalPurchaseComparator {
+ {static} COMPARATOR_WORD : String = "total"
}

class NameComparator {
+ {static} COMPARATOR_WORD : String = "name"
}

RankCommand -up-|> Command
RankCommand ..> CommandResult : > creates
RankCommand --> "1" Comparator : ranks clients with >
TotalPurchaseComparator .up.|> Comparator
NameComparator .up.|> Comparator

TotalPurchaseComparator ..> Client
NameComparator ..> Client

Client -d-> "1" Name : has >

@enduml
